Fix Dark Mode

--- a/events_styles.css
+++ b/events_styles.css
@@ -25,6 +25,16 @@ nav a {
   text-decoration: none;
 }
 
+.dark {
+  background: #121212;
+  color: white;
+}
+
+.dark header, .dark footer {
+  background: #880000;
+}
+
+
 #FireFight{
 
 width: 150px; 
